fixed scrollbar and added a description again?

--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
+::-webkit-scrollbar 
+{
+    display: none;
+}
+
+html
+{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
 body 
 {
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow: overlay;
 }
 
 #squares
